<resources>
    <string name="app_name">BMInfo</string>
    <!-- Menu Items -->
    <string name="action_metric">Metric Mode</string>
    <string name="action_imperial">Imperial Mode</string>
    <string name="action_aboutAuthor">About the Author</string>

    <!-- Labels for the BMI calculator -->
    <string name="label_heightMetric">Height in cm</string>
    <string name="label_weightMetric">Weight in kg</string>
    <string name="label_heightImperial">Height in inches</string>
    <string name="label_weightImperial">Weight in lbs</string>
    <string name="button_text_calculate">Calculate</string>
    <string name="label_bmi">BMI</string>
    <string name="calculated_bmi">XX.XX</string>

    <!-- About the author -->
    <string name="text_author">The author of this app is Patrick Hein.\n The app has been created
    for the laboratory course mobile and multimedia systems at Politechnika Wroclawska.
    </string>

    <!-- BMI Info -->
    <string name="text_bmi">Your BMI is</string>
    <string name="text_severelyUnderweight">That means you are severely underweight. Please consult a doctor.</string>
    <string name="text_underweight">That means you are underweight. Maybe eat more.</string>
    <string name="text_normal">That means your BMI is in the normal range, congratulations.</string>
    <string name="text_ovrweight">That means you are overweight. Eat less and exercise.</string>
    <string name="text_severelyOverweight">That means you are severely overweight. Please consult a doctor.</string>


    <!-- Formattable Strings and Error Messages -->
    <string name="float2decimals">%.2f</string>
    <string name="errormsg_emptyFields">Fields cannot be empty!</string>
    <string name="errormsg_invHeight">Height should be between %.0f%s and %.0f%s.</string>
    <string name="errormsg_invWeight">Weight should be between %.0f%s and %.0f%s.</string>
</resources>
